# hydraedge

./: 0. test_env.ipynb  1.tuple_extractor.ipynb  1b. alternative pipeline.ipynb  2. RL_agent.ipynb  2.ipynb  3. repo_changes_to_commit_message.py  3. test_env.ipynb  88.list-large-changes.ps1  CHV_visualization.ipynb  LICENSE  README.md  chv_force.html  chv_force_batch5.html  chv_force_with_connectors.html  chv_force_with_hulls.html  example_payload.json  example_payload_batch5.json  faiss_utils.py  nested_event_vis_pyvis.py  nested_event_vis_pyvis_batch5.py  package_to_text.py  print_dir_structure.py  pyproject.toml  requirements.txt  roles.tsv  sitecustomize.py  test_env.py  tiny.index  vectors.npy
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  smoke.yml
config/: extractor.yaml  kernel.yaml
data/: __init__.py
data/old_data_bin/: example_payload_batch5b.json
data/sample/: tiny_corpus.jsonl
data/sample-record-data-graph/: example_payload_schema_2.4(b).json
data/sample-vis-html/: chv_force_2.4(b).html  chv_force_2.4.html
docker/: Dockerfile
dockerfile/: Dockerfile
hydraedge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
notebooks/EDA/: CHV_validation.ipynb  CHV_visualization.ipynb  chv_force_batch5.html  chv_force_batch5b.html  chv_force_batch5c.html  chv_force_with_connectors.html  download_dataset.ipynb  example_payload.json  example_payload_batch5b.json  example_payload_batch5c.json  nested_event_vis.py  nested_event_vis_pyvis.py  nested_event_vis_pyvis_batch5.py  nested_event_vis_pyvis_batch5b.py  nested_event_vis_pyvis_batch5c.py  pyvis_template.html
notebooks/Tuple extraction/: try_extractor_pipeline.ipynb
notebooks/prototypes/: prototype_tuple_extractor.ipynb
scripts/: build_tiny_index.py  check_unseen_roles.sh  encode.py  seed_sample.py  setup_extractor_env.ps1  setup_extractor_env.sh  smoke_ui.sh  validate_json.py
src/: __init__.py
src/common/: logger.py
src/extractor/: __init__.py
src/hydraedge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/hydraedge/common/: logger.py
src/model/: cosine_kernel.py  encode_utils.py  kernel_base.py
src/serve/: app.py
src/training/: runner.py
tests/: conftest.py
tests/extractor/: test_api.py
tests/smoke/: build_tiny_index.py  test_cupy.py  test_encode_chain.py  test_extract.py  test_faiss.py  test_import_all.py  test_torch.py  test_transformer_srl.py
unallocated_files/: old_rule_approach_rules.ipynb  visualize_event_tuples.ipynb
unallocated_files/old_deps/: alias_service.py  deepinfra_client.py  edge_type_service.py  graph_store.py
(+98 files in other folders)
