[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydraedge"                       # ← unique PyPI slug
version = "0.1.2"
description = "HydraEdge: cross-document linker (VSA × RL) – EMNLP 2025 system demo"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["assymmetric", "cross-document", "non-isomorphic","linking", "Vector-symbolic", "reinforcement-learning"]
authors = [
  { name = "Pak Kin Lau, Stuart Michael McManus", email = "smcmanus@cuhk.edu.hk" }
]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.7",
  "torch>=2.2",
  "pytest>=8.2",
  "structlog>=24.1",
  "sentence-transformers >=2.2",
  "numpy<2",
  "thinc<8.2.0",
  "spacy<3.8.0",
]

[project.urls]
Homepage   = "https://github.com/pakkinlau/hydraedge"
Repository = "https://github.com/pakkinlau/hydraedge.git"
