[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydraedge"                       # ← unique PyPI slug
version = "0.1.2"
description = "HydraEdge: cross-document linker (VSA × RL) – EMNLP 2025 system demo"
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
  "assymmetric",
  "cross-document",
  "non-isomorphic",
  "linking",
  "Vector-symbolic",
  "reinforcement-learning",
]
authors = [
  { name = "Pak Kin Lau, Stuart Michael McManus", email = "smcmanus@cuhk.edu.hk" }
]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "fastapi>=0.111.0",
  "pydantic>=2.7.0",
  "starlette>=0.37.2",
  "httpx>=0.27.0",
  "jsonschema>=4.22.0",
]

# ── NEW: expose top-level packages that live in the repo root ─────────
[tool.setuptools]
package-dir = { "" = "." }

# still pick up everything under src/ *and* the repo root
[tool.setuptools.packages.find]
where = ["src", "."]

[project.scripts]
hydra-build-index = "hydraedge.scripts.build_tiny_index:main"
hydra-smoke       = "hydraedge.scripts.run_smoke:main"
hydra-seed-sample = "hydraedge.scripts.seed_sample:main"
hydra-encode      = "hydraedge.scripts.encode:main"

[project.urls]
Homepage   = "https://github.com/pakkinlau/hydraedge"
Repository = "https://github.com/pakkinlau/hydraedge.git"
